syntax = "proto3";
package codebased.v1;

// Authorization defined in TypeScript code (programmatic rules).
// See src/index.ts for createProtoAuthzInterceptor({ rules: [...] }).
service CodeBasedService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
  rpc SayGoodbye(SayGoodbyeRequest) returns (SayGoodbyeResponse) {}
  rpc SaySecret(SaySecretRequest) returns (SaySecretResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}

message SayGoodbyeRequest {
  string name = 1;
}

message SayGoodbyeResponse {
  string message = 1;
}

message SaySecretRequest {
  string name = 1;
}

message SaySecretResponse {
  string message = 1;
  string secret = 2;
}
